# ModelPipeline

./: .gitignore  CLAUDE.md  README.md  USAGE.md  check_badrate_bar.xlsx  gen_100k.py  generate_sample_report.py  pyproject.toml  report_100k.xlsx  requirements.txt  sample_report.xlsx
Lgb2Sql/: run_full_pipeline.py
ModelReport/: .gitignore  CLAUDE.md  readme.md  report_100k.xlsx  requirements.txt  sample_report.xlsx  test.csv
ModelVarDiff/: MANIFEST.in  claude.md  pyproject.toml  readme.md
ModelVarDiff/config/: variables.json
ModelVarDiff/data/: offline.csv  online.csv  vars.txt
ModelVarDiff/data/demo/: SED_SX_lgb_model.model  特征映射表_新底座_20260601.csv
ModelVarDiff/data/mt/: offline.csv  offline_clean.csv  online.csv  online_clean.csv  vars.txt
ModelVarDiff/model_loaders/: base.py  pkl_loader.py  text_loader.py
ModelVarDiff/model_var_diff/: VALIDATION_RULES.md  comparator.py  config_loader.py  main.py
ModelVarDiff/model_var_diff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ModelVarDiff/output/: report.md
ModelVarDiff/output/mt/: report.md
ModelVarDiff/ref/: dataset_learn.py
config/: config.yaml  metadata.yaml
data/: metadata_merged.csv
docs/: 03_implementation_guide.md  04_faq_and_notes.md  deployment.md  metrics-reference.md
model_library/: dataset_learn.py
model_report/: __init__.py  cli.py  config.py  generator.py  interface.py  metadata.py  metrics.py  writer.py
shared/: utils.py
src/: __init__.py  pipeline.py
tests/: test_config.py  test_generator.py  test_integration.py  test_interface.py  test_metadata.py  (+5 more)
(+100 files in other folders)
