[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-report"
version = "1.0.0"
description = "信贷风控LR模型报告生成器"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Model Report Team"}
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "toad>=0.1.0",
    "openpyxl>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "statsmodels>=0.14.0",
]

[project.scripts]
model-report = "model_report.cli:main"

[tool.setuptools.packages.find]
include = ["model_report", "model_report.*"]
